ticket 07 修正: T1 质心候选集按动作证据裁剪 + 判定线重标定
问题：压测拦截率归因到"政策问句没通过意图准入"，实测 16 条热点/改写问句里 5 条判成 UNKNOWN
而不进缓存。根因是 T0 未定案的句子本不可能有动作证据（T0 见实体或第一人称必定案），
但 T1 仍把 ACTION 质心放进候选，于是"退款多久到账"最近质心是 ACTION_REFUND(0.8518)、
"你们家用的哪家物流"是 ACTION_LOGISTICS(0.7766)，两者都不是政策桶 -> fail-closed 不缓存。
分类越保守，缓存越漏。

- T0RuleLayer.hasActionVerb：新增动作动词证据判定
- T1CentroidLayer.classify(…, actionEvidence)：无动作证据时候选只留 POLICY_* + ESCALATE
- 判定线由 scripts/calibrate_intent.py 在 180 条标注用例上重标定：
  置信度 0.82->0.70、领先差值 0.03->0.02，政策问句 T1 准入率 9.1% -> 72.7%，
  判错桶 1/24、动作被准入为政策 0 条；报告落 docs/intent-calibration.md，
  三条硬线（动作泄漏=0、置信度>=0.70、判错<=5%）写进脚本退出码
- loadtest：新增 mix80 流量模型，按任务书"QPS>=1200（80% 缓存命中）"的原口径出题
- run_loadtest：分流量类型报分位数（hot/para/action/long），CPU 与空闲内存采样，
  多 locust 进程发压（Windows 不支持 --processes，单进程 ~260 QPS 就先自饱和）
- 05-13 各 ticket 补 Handoff notes 并勾选，测试计数按实测 39+8+3=50 校正